--- a/package.json
+++ b/package.json
@@ -42,9 +42,10 @@
   },
   "dependencies": {
     "@types/shuffle-array": "^0.0.28",
-    "commander": "^2.19.0",
+    "@types/yargs": "^12.0.8",
     "discord.js": "^11.4.2",
-    "shuffle-array": "^1.0.1"
+    "shuffle-array": "^1.0.1",
+    "yargs": "^12.0.5"
   },
   "devDependencies": {
     "@types/jest": "^23.3.13",
